--- a/dividends/static/dividends/style.css
+++ b/dividends/static/dividends/style.css
@@ -14,7 +14,7 @@ html
 
 body
 {
-	background-color:white;
+	background-color:#fbff22;
 }
 
 div a 
@@ -42,4 +42,5 @@ div a
 	float:right;
 	width:66.66666%;
 	padding:0 8px;
+	background-color: blue;
 }
